@@ -4,6 +4,7 @@
 - Add mod options panel setting for extra debugging logging and reduce default logging detail
 - Add mod options panel button to regenerate building buttons
 - Adjust render lighting angle to reduce effects of themes with over-saturated light
+- Override theme exposure and sky tint when rendering previews
 - Use first submesh as render mesh when it has more tris than main mesh
 - Wait until confirmation level is fully loaded before generating thumbnails
 - Store building buttons directly in BuildingData record
